# alfredlinux

./: .gitignore  .gitmodules  .htaccess  404.html  AGENT-INSTRUCTIONS-v14.16.md  AGENT-INSTRUCTIONS.md  BUILD-MANIFEST.json  BUILD-MANIFEST.json.asc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.builder  FORGE-REPO-DESCRIPTION.txt  INSTALL.md  KERNEL-7.0.3-HASHES.txt  LICENSE  LICENSING.md  MANIFESTO.md  README.md  README.txt  STOP-READ-FIRST-AGENT-INSTRUCTIONS.md  TROUBLESHOOTING.md  apps.php  binary.packages  covenant-chain.json  fix-pulse.sh  iso-assembly.sh  lb-docker-build.log.preclean-20260508-rerun  lb-docker-build.log.prepack-20260508-  merge-extras.sh  night-shift-state.txt  packages.json  preflight.sh  recover-bootstrap.sh  recovery-rerun-hooks.sh  run-build-patched.sh  run-dashboard-wrapper.sh  run-fast-build-v3.sh  run_inventory.sh  security-kernel.php  vault-bake.sh
alfred-models-v2/: download_v2.sh
api/: version.json
auto/: config
build-assets/: ollama  sudo su with ubtuntu.txt
config/: alfred-automator.conf  binary  kernel-hardened.config  kernel.env
docs/: 2026-05-07-live-build-local-repo-note.md  2026-05-10-PRODUCTION-LAYOUT-FINAL.md  2026-05-10-bitnet-iso-staging.md  2026-05-10-kernel7-iso-rebuild.md  APPARMOR-ALFRED-MESH.txt  COVENANT-AND-CANONICAL-ISO-20260426.txt  FORGE-REPO-DESCRIPTION.txt  GOFORGE-INFRASTRUCTURE-UPGRADE.txt  HOOK-COUNT-DOCTRINE.md  ISO-BUILD-RISK-REGISTER.txt  ISO-STAGING-SHIP-GAPS.txt  KERNEL-7.0.1-SECURITY-MANIFEST.txt  MANIFEST-v1.txt  README.txt  (+10 more)
docs/web/mobile_html/archive_2026/pulse-social/src-tauri/: Cargo.toml
(+5713 files in other folders)
