[package]
name = "pulse-social"
version = "1.0.0"
description = "Pulse Social — The GoSiteMe Social Network"
authors = ["GoSiteMe Inc"]
license = "Proprietary"
repository = "https://github.com/gositeme/pulse-social"
edition = "2021"
default-run = "pulse-social"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
